Add hourly API
